# Mnemoniq

./: .env.example  .gitignore  pyproject.toml
memoryweave/core/: config.py  protocols.py  state.py
memoryweave/memory/: episodic_backend.py  episodic_store.py
