[project]
name = "memoryweave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "redis[asyncio]>=5.0.0",
    "qdrant-client[fastembed]>=1.9.0",
    "langchain-groq>=0.2.0",
    "chromadb>=1.5.9",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.14.0",
    "langchain>=1.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "networkx>=3.6.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "ragas>=0.4.3",
    "rouge-score>=0.1.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "uvicorn>=0.46.0",
    "json-repair>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
